Thu Aug 12 19:53:19 MEST 1999  Sven Neumann <sven@gimp.org>

	* app/Makefile.am
	* app/brush_scale.[ch]: new files that add brush-scaling
	* app/brush_select.c
	* app/devices.c
	* app/indicator_area.c: Scale brushes in the preview so they fit
	into the preview area. We will use this code for pressure-sensitive
	brush-scaling too, but I have to create a GUI for that first.

Thu Aug 12 18:54:38 MEST 1999  Sven Neumann <sven@gimp.org>

	* tools/pdbgen/pdb/gimprc.pdb: made the monitor resolution 
	accessible through a PDB function

	* app/internal_procs.c
	* app/gimprc_cmds.c: changed the autogenerated files

	* plug-ins/common/screenshot.c: set the image resolution to the
	monitor resolution and unset the image name

Tue Aug 10 01:15:59 1999 Adrian Likins <alikins@redhat.com>
	
	* app/pixmapbrush.c: fixed the weirdness with drawing
	along the left side of the image. Top's still weird

Mon Aug  9 22:46:34 1999 Adrian Likins <alikins@redhat.com>
	
	* app/pixmapbrush.c: couple of warning clean ups and
	some minor fleshing out, fix a bit of the border problems

Mon Aug  9 01:20:24 1999 Adrian Likins <alikins@redhat.com>

	* app/pixmapbrush.c 
	* app/pixmapbrush.h
	* app/gimpbrushpixmap.c
	* app/gimpbrushpixmap.h: New files, implement the GimpBrushPixmap
	  object, and the pixmap brush tool.

	* app/context_manager.c
	* app/tool_options.c 
	* app/tools.c
	* app/toolsF.h: add the pixmap brush tool in

	* app/gimpbrushlist.c: allow for loading of pixmap brushes and
	displaying them in the brush dialog. Currently it only shows the
	grey scale mask.

	*app/Makefile.am: add the pixmap tool stuff to the build process

	These Changes implement a pixmap brush tool. Sort of a "image stamp".
	Some examples can be seen at http://adrian.gimp.org/pixmap-brush/.

	Some examples of pixmap brushes can be found there too (.gpb
	extension), but these are easy enough to make (for now, make
	a pattern and a brush the same size and `cat foo.gbr foo.pat >
	foo.gpb` ;->
