@@ -66,6 +66,7 @@ gimp_OBJECTS = \
 	boundary.o		\
 	brightness_contrast.o	\
 	brush_edit.o		\
+	brush_scale.o		\
 	brush_select.o		\
 	brush_select_cmds.o	\
 	brushes_cmds.o		\
@@ -135,6 +136,7 @@ gimp_OBJECTS = \
 	gimpbrush.o		\
 	gimpbrushgenerated.o	\
 	gimpbrushlist.o		\
+	gimpbrushpixmap.o	\
 	gimpcontext.o		\
 	gimphistogram.o		\
 	gimplist.o		\
@@ -198,6 +200,7 @@ gimp_OBJECTS = \
 	perspective_tool.o	\
 	pixel_processor.o	\
 	pixel_region.o		\
+	pixmapbrush.o		\
 	plug_in.o		\
 	plug_in_cmds.o		\
 	posterize.o		\
